0706_싱글탭작업완료

--- a/singleTab/singleTab.html
+++ b/singleTab/singleTab.html
@@ -16,11 +16,8 @@
         <div id="contents" class="flex-container">
 
             <div id="notice">
-
                 <button type="button" class="tabBtn">공지사항</button>
-
                 <div class="tabContents">
-
                     <table>
                         <tbody>
                             <tr>
@@ -41,13 +38,33 @@
                             </tr>
                         </tbody>
                     </table>
-
                 </div>  <!-- div.tabContents -->
-
             </div> <!-- div#notice -->
 
 
-            <div id="gallery">갤러리</div>
+            <div id="gallery">
+
+                <button type="button" class="tabBtn">갤러리</button>
+
+                <div class="tabContents">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <img src="images/gallery01.jpg" alt="갤러리이미지1" width="120" height="140">
+                                </td>
+                                <td>
+                                    <img src="images/gallery02.jpg" alt="갤러리이미지2" width="120" height="140">
+                                </td>
+                                <td>
+                                    <img src="images/gallery03.jpg" alt="갤러리이미지3" width="120" height="140">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>  <!-- div.tabContents -->
+
+            </div> <!-- div#gallery -->
             <div id="banner">배너(=광고)</div>
 
         </div> <!-- div#contents -->
